--- a/Demo2/appsettings.json
+++ b/Demo2/appsettings.json
@@ -7,5 +7,9 @@
   },
   "ApplicationInsights": {
     "InstrumentationKey": "f7e41a22-328e-4c68-848e-2c56614abdb4"
+  },
+  "ConnectionStrings": {
+    "DataAccessMySqlProvider": "Server=services.dev;Uid=appuser;Pwd=app;Database=Customer;"
   }
+}
 }
